Add .show to routes skills.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,5 +6,5 @@
     </head>
     <body>
         <h1>Express Dev-Skills</h1>
-        <a href="/">HOME</a>
+        <a href="/">HOME</a> &nbsp; |  &nbsp;
         <a href="/skills">ALL SKILLS</a>
