--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -3,10 +3,13 @@
 <ul>
     <% skills.forEach(function(s) { %>
       <li>
+        <form action="/skills/<%= s.id %>?_method=DELETE" method="POST"></form>
+          <button type="submit">🗑️</button>
         <a href="/skills/<%= s.id %>"><%= s.skill %></a>
       </li>
     <% }); %>
   </ul>
+  <a href="/skills/new">Add New Skill</a>
 
 
 <%- include('../partials/footer') %>
