--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -3,8 +3,9 @@
 <ul>
     <% skills.forEach(function(s) { %>
       <li>
-        <form action="/skills/<%= s.id %>?_method=DELETE" method="POST"></form>
+        <form action="/skills/<%= s.id %>?_method=DELETE" method="POST" class="delete-form">
           <button type="submit">🗑️</button>
+        </form>
         <a href="/skills/<%= s.id %>"><%= s.skill %></a>
       </li>
     <% }); %>
